--- a/AgnosLupiProto/AgnosLupiProto.cbp
+++ b/AgnosLupiProto/AgnosLupiProto.cbp
@@ -13,7 +13,11 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
+				<Linker>
+					<Add library="lib/pdcurses.lib" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/AgnosLupiProto" prefix_auto="1" extension_auto="1" />
@@ -44,6 +48,8 @@
 		<Unit filename="Organism.h" />
 		<Unit filename="Simulation.cpp" />
 		<Unit filename="Simulation.h" />
+		<Unit filename="include/curses.h" />
+		<Unit filename="include/panel.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
